changed collectors collect tolist to just tolist